--- a/packages/earth-map/package.json
+++ b/packages/earth-map/package.json
@@ -22,6 +22,7 @@
     "chroma-js": "^2.1.0",
     "core-js": "^3.6.5",
     "fuse.js": "^3.4.4",
+    "google-translate": "^3.0.0",
     "lodash": "^4.17.15",
     "orbit-controls-es6": "^2.0.0",
     "prettier": "^1.19.1",
